--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "api_key": "AIzaSyA92T3CejAd_SurkUBEQSx59Z7FZCkzmro",
+    "api_key": "",
     "renew": false,
     "video_num": 100,
     "comment_num": 20
